backbone のベースコミット

--- a/project-base/public/private/src/main/html/second-view.html
+++ b/project-base/public/private/src/main/html/second-view.html
@@ -1,4 +1,7 @@
 <div id="def">
-	<p class="notes">ab</p>
+	<p class="notes">
+		id: <%-id%><br>
+		name: <%-name%>
+	</p>
 	<a class="move-button">移動</a>
 </div>
