--- a/project-base/public/private/src/main/html/second-view.html
+++ b/project-base/public/private/src/main/html/second-view.html
@@ -1,7 +1,7 @@
 <div id="def">
 	<p class="notes">
-		id: <%-id%><br>
-		name: <%-name%>
+		id: <%- model.id %><br>
+		name: <%- model.get("name") %>
 	</p>
 	<a class="move-button">移動</a>
 </div>
