--- a/project-base/public/index.html
+++ b/project-base/public/index.html
@@ -7,6 +7,30 @@
 	<script type="text/javascript" src="js/load.js"></script>
 </head>
 <body>
+
+
+<nav class="top-bar" data-topbar>
+  <ul class="title-area">
+    <li class="name">
+      <h1><a href="/">project base</a></h1>
+    </li>
+    <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
+  </ul>
+  <section class="top-bar-section">
+    <ul class="right">
+      <li class="has-dropdown">
+        <a href="#">Right Button with Dropdown</a>
+        <ul class="dropdown">
+          <li><a href="/#first">first</a></li>
+          <li><a href="/#second">second</a></li>
+        </ul>
+      </li>
+    </ul>
+  </section>
+</nav>
+
+
+
 	<div id="mainContent">ng</div>
 </body>
 </html>
