--- a/project-base/public/index.html
+++ b/project-base/public/index.html
@@ -14,12 +14,11 @@
     <li class="name">
       <h1><a href="/">project base</a></h1>
     </li>
-    <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
   </ul>
   <section class="top-bar-section">
     <ul class="right">
       <li class="has-dropdown">
-        <a href="#">Right Button with Dropdown</a>
+        <a href="#">menu</a>
         <ul class="dropdown">
           <li><a href="/#first">first</a></li>
           <li><a href="/#second">second</a></li>
