--- a/project-base/public/index.html
+++ b/project-base/public/index.html
@@ -12,7 +12,7 @@
 <nav class="top-bar" data-topbar>
   <ul class="title-area">
     <li class="name">
-      <h1><a href="/">project base</a></h1>
+      <h1><a href="index.html">project base</a></h1>
     </li>
   </ul>
   <section class="top-bar-section">
@@ -20,8 +20,8 @@
       <li class="has-dropdown">
         <a href="#">menu</a>
         <ul class="dropdown">
-          <li><a href="/#first">first</a></li>
-          <li><a href="/#second">second</a></li>
+          <li><a href="#first">first</a></li>
+          <li><a href="#second">second</a></li>
         </ul>
       </li>
     </ul>
