--- a/project-base/public/index.html
+++ b/project-base/public/index.html
@@ -7,29 +7,7 @@
 	<script type="text/javascript" src="js/load.js"></script>
 </head>
 <body>
-
-
-<nav class="top-bar" data-topbar>
-  <ul class="title-area">
-    <li class="name">
-      <h1><a href="index.html">project base</a></h1>
-    </li>
-  </ul>
-  <section class="top-bar-section">
-    <ul class="right">
-      <li class="has-dropdown">
-        <a href="#">menu</a>
-        <ul class="dropdown">
-          <li><a href="#first">first</a></li>
-          <li><a href="#second">second</a></li>
-        </ul>
-      </li>
-    </ul>
-  </section>
-</nav>
-
-
-
+  <div id="header">header</div>
 	<div id="mainContent">ng</div>
 </body>
 </html>
