--- a/project-base/public/private/src/main/html/header.html
+++ b/project-base/public/private/src/main/html/header.html
@@ -11,6 +11,7 @@
         <ul class="dropdown">
           <li><a href="#first">first</a></li>
           <li><a href="#second">second</a></li>
+          <li><a href="#third">third</a></li>
         </ul>
       </li>
     </ul>
