--- a/project-base/public/index.html
+++ b/project-base/public/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>template</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>project-base</title>
 	<link rel="stylesheet" href="css/style.min.css">
+	<script src="js/modernizr.js"></script>
 	<script type="text/javascript" src="js/load.js"></script>
 </head>
 <body>
