--- a/project-base/public/private/src/main/html/header.html
+++ b/project-base/public/private/src/main/html/header.html
@@ -1,7 +1,7 @@
 <nav class="top-bar" data-topbar>
   <ul class="title-area">
     <li class="name">
-      <h1><a href="index.html">project base</a></h1>
+      <h1><a href="#">project base</a></h1>
     </li>
   </ul>
   <section class="top-bar-section">
