--- a/project-base2/public/index.html
+++ b/project-base2/public/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script data-main="js/main.js" src="js/requirejs/require.js"></script>
+	<script src="private/src/main/js/require_config.js"></script>
+	<script data-main="private/src/main/js/main.js" src="js/requirejs/require.js"></script>
 	<title>project-base2</title>
 </head>
 <body>
