--- a/project-base2/public/index.html
+++ b/project-base2/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app>
+<html ng-app="myApp">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,9 +9,11 @@
 </head>
 <body>
 
-<div ng-controller='HelloController'>
-	<input ng-model='greeting.text'>
-	<p>{{greeting.text}}, World</p>
+<div>
+	<div ng-controller='HelloController'>
+		<input ng-model='greeting.text'>
+		<p>{{greeting.text}}, World</p>
+	</div>
 </div>
 
 </body>
