--- a/project-base2/public/index.html
+++ b/project-base2/public/index.html
@@ -7,6 +7,53 @@
 	<script src="private/src/main/js/require_config.js"></script>
 	<script data-main="private/src/main/js/main.js" src="js/requirejs/require.js"></script>
 	<title>project-base2</title>
+
+
+
+
+	<style>
+header,footer{
+    height:300px;
+    text-align:center;
+    font-size:50px;
+    line-height:300px;
+    background-color:#eee;
+}
+#main article{
+    height:300px;
+    border:1px solid black;
+    margin:20px 0;
+}
+.affix-nav{
+    width:263px;
+}
+.affix-nav.affix{
+    top:0;
+    position:fixed;
+}
+.affix-nav.affix-top{
+    position:static;
+}
+.affix-nav.affix-bottom{
+    position:absolute;
+}
+.affix-nav .nav li{
+    background-color:#8f8;
+    border-left:1px solid black;
+    border-right:1px solid black;
+    border-bottom:1px solid black;
+}
+.affix-nav .nav li:first-child{
+    border-top:1px solid black;
+}
+.affix-nav .nav li.active{
+    background-color:#4c4;
+}
+	</style>
+
+
+
+
 </head>
 <body>
 
@@ -47,6 +94,117 @@
     </div>
   </div>
 </div>
+
+
+
+
+<div class="btn-group" data-toggle="buttons">
+  <label class="btn btn-primary active">
+    <input type="checkbox" checked> Option 1 (pre-checked)
+  </label>
+  <label class="btn btn-primary">
+    <input type="checkbox"> Option 2
+  </label>
+  <label class="btn btn-primary">
+    <input type="checkbox"> Option 3
+  </label>
+</div>
+
+
+<!-- Nav tabs -->
+<ul class="nav nav-tabs" role="tablist">
+  <li class="active"><a href="#home" role="tab" data-toggle="tab">Home</a></li>
+  <li><a href="#profile" role="tab" data-toggle="tab">Profile</a></li>
+  <li><a href="#messages" role="tab" data-toggle="tab">Messages</a></li>
+  <li><a href="#settings" role="tab" data-toggle="tab">Settings</a></li>
+</ul>
+
+<!-- Tab panes -->
+<div class="tab-content">
+  <div class="tab-pane active" id="home">aa</div>
+  <div class="tab-pane" id="profile">bb</div>
+  <div class="tab-pane" id="messages">cc</div>
+  <div class="tab-pane" id="settings">dd</div>
+</div>
+
+
+
+
+
+<div class="dropdown">
+  <a id="dLabel" role="button" data-toggle="dropdown" data-target="#" href="/page.html">
+    Dropdown <span class="caret"></span>
+  </a>
+
+
+  <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+    ...
+  </ul>
+</div>
+
+
+
+
+<button type="button" class="btn btn-default btn-lg">
+  <span class="glyphicon glyphicon-star"></span> Star
+</button>
+
+
+
+<div class="dropdown">
+  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
+    Dropdown
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Another action</a></li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Something else here</a></li>
+    <li role="presentation" class="divider"></li>
+    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated link</a></li>
+  </ul>
+</div>
+
+
+
+
+
+<!-- http://am-yu.net/2014/04/20/bootstrap3-affix-scrollspy/ -->
+<div class="container">
+    <header>HEADER</header>
+    <div class="row">
+        <div class="col-sm-3">
+            <nav class="affix-nav">
+                <ul class="nav">
+                    <li><a href="#article1">１番目</a></li>
+                    <li><a href="#article2">２番目</a></li>
+                    <li><a href="#article3">３番目</a></li>
+                    <li><a href="#article4">４番目</a></li>
+                    <li><a href="#article5">５番目</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="col-sm-9" id="main">
+            <article id="article1">
+                <h1>１番目</h1>
+            </article>
+            <article id="article2">
+                <h1>２番目</h1>
+            </article>
+            <article id="article3">
+                <h1>３番目</h1>
+            </article>
+            <article id="article4">
+                <h1>４番目</h1>
+            </article>
+            <article id="article5">
+                <h1>５番目</h1>
+            </article>
+        </div>
+    </div>
+    <footer>FOOTOR</footer>
+</div>
+
 
 
 
