--- a/project-base2/public/index.html
+++ b/project-base2/public/index.html
@@ -168,6 +168,11 @@ header,footer{
 
 
 
+<a href="#/view1">view1</a><br>
+<a href="#/view2">view2</a><br>
+<div data-ng-view>bb</div>
+
+
 
 <!-- http://am-yu.net/2014/04/20/bootstrap3-affix-scrollspy/ -->
 <div class="container">
