--- a/project-base2/public/index.html
+++ b/project-base2/public/index.html
@@ -10,15 +10,9 @@
 </head>
 <body>
 
-<div>
-	<div ng-controller='HelloController'>
-		<input ng-model='greeting.text'>
-		<p>{{greeting.text}}, World</p>
-	</div>
-</div>
-
 <a href="#/view1">view1</a><br>
 <a href="#/view2">view2</a><br>
+<a href="#/view3">view3</a><br>
 <div data-ng-view>bb</div>
 
 </body>
