--- a/project-base2/public/index.html
+++ b/project-base2/public/index.html
@@ -13,6 +13,7 @@
 <a href="#/view1">view1</a><br>
 <a href="#/view2">view2</a><br>
 <a href="#/view3">view3</a><br>
+<a href="#/view4">view4</a><br>
 <div data-ng-view>bb</div>
 
 </body>
