--- a/sample_webpack/index.html
+++ b/sample_webpack/index.html
@@ -1,7 +1,8 @@
 <html>
 <head><meta charset="utf-8"></head>
 <body>
-bbb
+bbb<br>
+<div id="test-box">test</div>
 <script type="text/javascript" src="dist/build_main.js" charset="utf-8"></script>
 </body>
 </html>
