--- a/sample_webpack/webroot/index.html
+++ b/sample_webpack/webroot/index.html
@@ -1,7 +1,7 @@
 <html>
 <head><meta charset="utf-8"></head>
 <body>
-bbb<br>
+<a onclick='alert("ok");'>click me</a><br>
 <div id="test-box">test</div>
 <script type="text/javascript" src="dist/build_main.js" charset="utf-8"></script>
 </body>
