--- a/sample_gulp_webpack/webroot/index.html
+++ b/sample_gulp_webpack/webroot/index.html
@@ -3,6 +3,6 @@
 <body>
 <a onclick='alert("ok");'>click me</a><br>
 <div id="test-box">test</div>
-<script type="text/javascript" src="dist/js/bundle.js" charset="utf-8"></script>
+<script type="text/javascript" src="dist/js/build_main.js" charset="utf-8"></script>
 </body>
 </html>
