--- a/sample_webpack/webroot/index.html
+++ b/sample_webpack/webroot/index.html
@@ -3,6 +3,9 @@
 <body>
 <a onclick='alert("ok");'>click me</a><br>
 <div id="test-box">test</div>
-<script type="text/javascript" src="dist/build_main.js" charset="utf-8"></script>
+<input type="text" name="text-a">
+
+<script type="text/javascript" src="/public/build_main.js" charset="utf-8"></script>
+
 </body>
 </html>
