--- a/sample_gulp_webpack/webroot/index.html
+++ b/sample_gulp_webpack/webroot/index.html
@@ -3,6 +3,8 @@
 <body>
 <a onclick='alert("ok");'>click me</a><br>
 <div id="test-box">test</div>
-<script type="text/javascript" src="dist/js/main.js" charset="utf-8"></script>
+<input type="text" name="text-a">
+
+<script type="text/javascript" src="/main2.js" charset="utf-8"></script>
 </body>
 </html>
