--- a/sample_vue/pub/index.html
+++ b/sample_vue/pub/index.html
@@ -4,6 +4,7 @@
 <body>
 
 <a href="index_js.html">index_js.html</a><br>
+<a href="index_js2.html">index_js2.html</a><br>
 <a href="index_ts.html">index_ts.html</a><br>
 
 </body>
