--- a/sample_vue/pub/index_ts.html
+++ b/sample_vue/pub/index_ts.html
@@ -5,7 +5,7 @@
 
 <div id="app"></div>
 
-<script src="/public/main_ts2.js" type="text/javascript"></script>
+<script src="/public/main_ts.min.js" type="text/javascript"></script>
 
 </body>
 </html>
