sample vue typescript

--- a/sample_vue/pub/index.html
+++ b/sample_vue/pub/index.html
@@ -6,6 +6,7 @@
 <a href="index_js.html">index_js.html</a><br>
 <a href="index_js2.html">index_js2.html</a><br>
 <a href="index_ts.html">index_ts.html</a><br>
+<a href="index_router.html">index_router.html</a><br>
 
 </body>
 </html>
