--- a/project-base3/webRootLive/index.html
+++ b/project-base3/webRootLive/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="dist/index.min.css">
+    <link rel="stylesheet" href="/dist/index.min.css">
 </head>
 <body>
 
@@ -11,7 +11,7 @@
 <div id="app"></div>
 <div id="footer"></div>
 
-<script src="dist/main.min.js" type="text/javascript"></script>
+<script src="/dist/main.min.js" type="text/javascript"></script>
 
 </body>
 </html>
